src/Style.scss
$teal: #05cfd3;
$main-font: "Poppins", sans-serif;

* {
  margin: 0;
  padding: 0;
}
//Global
h1,
h2,
h3,
h4,
h5 {
  font-family: $main-font;
}
.teal-button {
  background-color: $teal;
  padding: 0.8rem 1.5rem;
  font-size: 1.1rem;
  font-family: $main-font;
  border: none;
  margin-top: 2rem;
  border: 1px solid $teal;
  cursor: pointer;
  margin-left: 1rem;
  transition: all 0.4s ease-in-out;
  border-radius: 5px;
}
.teal-button:hover {
  color: white;
  background-color: transparent;
}
.spotify-player {
  width: 500px;
  height: 400px;
}
.carousel {
  width: 85%;
  margin: auto;
  img {
    height: auto;
    max-width: 100%;
    object-fit: cover;
    padding: 0.5rem;
    border: 1px solid black;
  }
}
.loading-container {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
}
.span-teal {
  color: $teal;
}
*::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  background-color: #f5f5f500;
}

*::-webkit-scrollbar {
  width: 5px;
  background-color: #f5f5f500;
}

*::-webkit-scrollbar-thumb {
  border-radius: 10px;
  height: 5px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: rgba(0, 238, 255, 0.753);
}

*::-webkit-scrollbar-track-piece:end {
  background: transparent;
  margin-bottom: 5px;
}

*::-webkit-scrollbar-track-piece:start {
  background: transparent;
  margin-top: 5px;
}

//End Global

//Landing Page
.hero-container {
  display: flex;
  height: auto;
  padding: 3rem 1.5rem;
  justify-content: center;
  align-items: center;
  color: white;
  background: url("Images/background.jpg");
  background-repeat: no-repeat;
  background-size: cover;

  input {
    padding: 0.8rem;
    color: black;
    font-size: 1rem;
    border: 1px solid white;
    border-radius: 5px;
    width: 500px;
  }

  .hero-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-content: center;
    align-items: center;
    padding: 2rem;
    margin: auto;
    gap: 2rem;
  }
  .hero-new-releases {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
    padding: 1rem;
    img {
      height: 100%;
      width: 100%;
      transition: 0.4s all ease-in-out;
    }
    p:nth-child(3) {
      color: rgba(255, 255, 255, 0.7);
    }
  }
}
.hero-heading {
  font-size: 5vw;
  text-transform: uppercase;
  font-weight: 1500;
}
.hero-subheading {
  color: rgba(255, 255, 255, 0.8);
  font-weight: 100;
  font-size: 2vw;
}
.recommended-container {
  margin: auto;
  text-align: center;
  background-color: black;
  color: white;
  h1 {
    padding: 4rem 0 4rem 0;
  }
}
.sales-landing-container {
  background-color: black;
  color: white;
  text-align: center;
  .sales-container {
    width: 85%;
    margin: auto;
    padding: 4rem 0 4rem 0;
    p {
      font-size: 5rem;
    }
    span {
      color: $teal;
    }
  }
}
.signup-landing-container {
  background-color: black;
  color: white;
  text-align: center;
  .signup-container {
    padding-bottom: 4rem;
    h1 {
      padding: 4rem 0 0rem 0;
    }
    span {
      color: $teal;
    }
    h3 {
      padding-bottom: 2rem;
    }
    label {
      display: block;
      font-size: 1.25rem;
      padding: 1rem;
    }
    input {
      background-color: white;
      padding: 0.8rem;
      font-size: 1.5rem;
      color: black;
      border: none;
      border-radius: 1px;
      width: 40%;
    }
    button {
      display: block;
      margin: auto;
      margin-top: 1rem;
      width: 40%;
    }
  }
}
//End Landing Page

//Album Page
.album-container {
  display: flex;
  color: white;
  background-color: black;
  height: auto;
  justify-content: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  padding: 4rem 1rem;

  .album-grid {
    display: flex;
    gap: 2rem;
    padding: 2rem;
    width: 80%;
    margin: auto;
  }

  .album-info {
    h1,
    h3 {
      margin-top: 1rem;
      text-shadow: 1px 1px 1px black;
    }
    h1 {
      margin-bottom: 1rem;
    }
    .album-artist {
      transition: 0.4s all ease-in-out;
      color: hotpink;
    }
    .album-artist:hover {
      text-decoration: underline;
    }
  }
}
//Album Page End

//Artist Page
.artist-container {
  display: flexbox;
  color: white;
  background-color: black;
  height: auto;
  justify-content: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}
//Artist Page
.artist-banner {
  width: 100%;
  position: relative;
  img {
    width: 100%;
    height: 80vh;
    object-fit: cover;
    object-position: center;
  }
  h1 {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 6rem;
    z-index: 20;
    text-shadow: 2px 2px 1px rgba(0, 0, 0, 1);
  }
  //gradient overlay
  .overlay {
    position: absolute;
    width: 100%;
    height: 80vh;
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.75));
    top: 0;
    z-index: 10;
  }
  iframe {
    position: absolute;
    left: 2.5%;
    bottom: 5%;
    z-index: 20;
  }
  .genres {
    position: absolute;
    right: 2.5%;
    bottom: 5%;
    z-index: 20;
  }
}

.latest-album-wrapper {
  display: flex;
  width: 85%;
  margin: 2rem auto;
  flex-direction: column;

  .album-info-container {
    display: flex;
    gap: 2rem;
    align-items: center;
    img {
      width: auto;
    }
  }
  .album-info {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    width: 100%;
    iframe {
      width: 97.5%;
    }
  }
}
/* ... */

